# webds_api

./: .gitignore  MANIFEST.in  README.md  RELEASE.md  install.json  package.json  pyproject.toml  setup.py
jupyter-config/server-config/: webds_api.json
resource/: swagger.yaml
resource/obfuscate/: generateDist.sh  goalkeeper.py  pyarmor.txt
resource/openapi/: webds_api.yaml
src/: handler.ts  index.ts
webds_api/: __init__.py  errors.py  file_manager.py  gear_selection_manager.py  handlers.py  imagefile_manager.py  production_test_manager.py  programmer_manager.py  report_manager.py  route_about.py  route_command.py  route_config.py  route_filesystem.py  route_gear_selection.py  route_general.py  route_image.py  route_packrat.py  route_production_tests.py  route_reflash.py  route_report.py  route_reprogram.py  route_settings.py  route_software_update.py  touchcomm_manager.py  utils.py  webds.py  wifi_manager.py
webds_api/boot_config/: lockdown.py
webds_api/configuration/: config_handler.py
webds_api/device/: device_info.py  device_manager.py
webds_api/file/: file_manager.py
webds_api/image/: image_parser.py  imagefile_manager.py
webds_api/obfuscate/: goalkeeper.py
webds_api/production_test/: production_test_manager.py
webds_api/production_test_v2/: production_test_manager.py  production_test_result.py
webds_api/program/: programmer_manager.py
webds_api/report/: report_manager.py
webds_api/route/: route_about.py  route_boot_config.py  route_command.py  route_config.py  route_data_collection.py  route_filesystem.py  route_gear_selection.py  (+15 more)
(+206 files in other folders)
